--- a/git.html
+++ b/git.html
@@ -9,7 +9,7 @@
          <li> Vagrant </li>
          <li> Docker </li>
          <li> Ansible </li>
-         <li> Integración contínua </li>
+         <li> Integración contínua: Madures y productividad en el Desarrollo de Software </li>
      </ul>
 </body>
 </html>
